tests/e2e/fail/ptr_type_declaration.ep
# COMPILE_ERROR: reserved type name 'ptr'
type ptr {
    value: i64
}

fun main(): void {
}
